# Vim-Bash-Configuration

./: README.md  Xresources  bashrc  install_apps.sh  make_symbolic_links.sh  pythonstartup  remove_symbolic_links.sh  runDmenu  tmux.conf  vimrc
config/nvim/: init.vim
config/openbox/: autostart.sh  menu.xml  rc.xml
vim/personal/: _project.vim  _vimrc
vim/projects/: .project.vim  .ycm_extra_conf.py  CMakeLists.txt  Makefile
vim/syntax/: conf.vim
